--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@
 
 a {
   text-decoration: none;
+  transition: 0.15s;
+}
+
+a:hover {
+  color: #52BAB4;
+  transition: 0.15s;
 }
 
 p {
@@ -23,6 +29,12 @@ h3 {
 
 img {
   max-width: 100%;
+  transition: 0.15s;
+}
+
+img:hover {
+  transform: scale(1.025);
+  transition: 0.15s;
 }
 
 .clearfix::after {
@@ -44,6 +56,7 @@ footer {
 
 header h1 {
   padding: 15px 0;
+  font-family: 'Homemade Apple', cursive;
 }
 
 header ul {
@@ -77,15 +90,54 @@ h2 {
 
 main {
   padding: 1px 15px;
-  background-color: white;
+  background-color: #eee;
 }
 
 main article {
   margin: 50px 0;
 }
 
+main hr {
+  border: 1px #aaa solid;
+  width: 90%;
+  margin: 30px auto;
+}
+
+.skills {
+  margin-bottom: 50px;
+}
+
+ul.skills {
+  padding: 0;
+  text-align: center;
+}
+
+.skills li {
+  border-radius: 6px;
+  display: inline-block;
+  background: #36ACD0;
+  color: white;
+  padding: 5px 10px;
+  margin: 2px;
+  font-weight: bold;
+  transition: 0.15s;
+}
+
+.skills li:hover {
+  transform: scale(1.05);
+  transition: 0.15s;
+}
+
+.skills li:nth-child(odd) {
+  background: #52BAB4;
+}
+
 main article h3 {
   margin: 15px 0;
+}
+
+main article p {
+  color: #aaa;
 }
 
 footer h2 {
